tv show number of speakers

--- a/assets/templates/tv_show_grafics.html
+++ b/assets/templates/tv_show_grafics.html
@@ -105,7 +105,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Number of speakers:</td>
-                                                <td>{{tv_show.speakers.length}}</td>
+                                                <td>{{tv_show.number_of_speakers}}</td>
                                             </tr>
                                         </table>
                                     </td>
