season stat naming

--- a/assets/templates/season_config_tables.html
+++ b/assets/templates/season_config_tables.html
@@ -48,7 +48,7 @@
                                                     <td>{{(selectedSeason.configuration_density).toFixed(2)}}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Number of Scenes:</td>
+                                                    <td>Number of Episodes:</td>
                                                     <td>{{selectedSeason.number_of_episodes}}</td>
                                                 </tr>
                                                 <tr>
