speach length download season

--- a/assets/templates/season_config_tables.html
+++ b/assets/templates/season_config_tables.html
@@ -136,6 +136,9 @@
                                     <nvd3 options="barOptions" data="replica_length_list"></nvd3>
                                 </div>
                             </div>
+                            <div class="col-md-12 bar-chart">
+                                <md-button class="md-raised" ng-click="downloadReplicaCSV()">Download as CSV</md-button>
+                            </div>
                         </div>
                     </div>
 
