--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
+#content {
+    top: 40px;
+    position: relative;
+}
+
 .speaker-label {
     position: relative;
     text-align: center;
@@ -40,6 +45,7 @@
     animation: spin 2s linear infinite;
     margin: auto;
 }
+
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
