--- a/assets/templates/download_view.html
+++ b/assets/templates/download_view.html
@@ -156,112 +156,6 @@
                         <div ng-show="all_seasons == null">Preparing data...<i ng-show="all_seasons == null"
                                                                                class='fa fa-spinner fa-spin'></i></div>
                     </legend>
-                    <!--
-                    <h5>Episodes Scenes Statistics</h5>
-
-                    <section layout="row" layout-align="center center">
-                        <md-button class="seasonButtonGroup md-raised" ng-click="downloadSeasonEpisodeStats(1)"
-                                   ng-disabled="all_episodes == null">Season 1
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeStats(2)" ng-disabled="all_episodes == null">
-                            Season 2
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeStats(3)" ng-disabled="all_episodes == null">
-                            Season 3
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeStats(4)" ng-disabled="all_episodes == null">
-                            Season 4
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeStats(5)" ng-disabled="all_episodes == null">
-                            Season 5
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeStats(6)" ng-disabled="all_episodes == null">
-                            Season 6
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeStats(7)" ng-disabled="all_episodes == null">
-                            Season 7
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised" ng-click="downloadSeasonEpisodeStats(8)"
-                                   ng-disabled="all_episodes == null">Season 8
-                        </md-button>
-                    </section>
-                    <h5>Season Episodes Speech Distribution</h5>
-
-                    <section layout="row" layout-align="center center">
-                        <md-button class="seasonButtonGroup md-raised" ng-click="downloadSeasonEpisodeSpeechDist(1)"
-                                   ng-disabled="all_episodes == null">Season 1
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeSpeechDist(2)" ng-disabled="all_episodes == null">
-                            Season 2
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeSpeechDist(3)" ng-disabled="all_episodes == null">
-                            Season 3
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeSpeechDist(4)" ng-disabled="all_episodes == null">
-                            Season 4
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeSpeechDist(5)" ng-disabled="all_episodes == null">
-                            Season 5
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeSpeechDist(6)" ng-disabled="all_episodes == null">
-                            Season 6
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonEpisodeSpeechDist(7)" ng-disabled="all_episodes == null">
-                            Season 7
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised" ng-click="downloadSeasonEpisodeSpeechDist(8)"
-                                   ng-disabled="all_episodes == null">Season 8
-                        </md-button>
-                    </section>
-
-                    <h5>Season Speaker Statistics</h5>
-
-                    <section layout="row" layout-align="center center">
-                        <md-button class="seasonButtonGroup md-raised" ng-click="downloadSeasonSpeakerStatistics(1)"
-                                   ng-disabled="all_seasons == null">Season 1
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonSpeakerStatistics(2)" ng-disabled="all_seasons == null">
-                            Season 2
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonSpeakerStatistics(3)" ng-disabled="all_seasons == null">
-                            Season 3
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonSpeakerStatistics(4)" ng-disabled="all_seasons == null">
-                            Season 4
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonSpeakerStatistics(5)" ng-disabled="all_seasons == null">
-                            Season 5
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonSpeakerStatistics(6)" ng-disabled="all_seasons == null">
-                            Season 6
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised middle"
-                                   ng-click="downloadSeasonSpeakerStatistics(7)" ng-disabled="all_seasons == null">
-                            Season 7
-                        </md-button>
-                        <md-button class="seasonButtonGroup md-raised" ng-click="downloadSeasonSpeakerStatistics(8)"
-                                   ng-disabled="all_seasons == null">Season 8
-                        </md-button>
-                    </section>
-
-                    -->
                     <md-button class="md-raised" ng-click="downloadEpisodeNumberOfSpeechesPerSpeaker()"
                                ng-disabled="all_episodes == null">Download Episode Number of Speeches Values for Speakers
                     </md-button>
@@ -296,7 +190,39 @@
                 </fieldset>
             </div>
             <div class="col-md-6">
+                <fieldset class="well fieldset">
+                    <legend class="legend">Speaker Related Data
+                        <div ng-show="all_seasons == null">Preparing data...<i ng-show="all_seasons == null"
+                                                                               class='fa fa-spinner fa-spin'></i></div>
+                    </legend>
 
+                    <h5>Speaker Speeches</h5>
+
+                    <section layout="row" layout-align="center center">
+                        <md-select placeholder="Choose Speaker" ng-model="speaker" md-on-open="loadTvShowSpeakers()"
+                                   style="min-width: 200px;">
+                            <md-option ng-value="speaker" ng-repeat="speaker in tv_show_speakers">{{speaker.name}}
+                            </md-option>
+                        </md-select>
+
+                        <md-select placeholder="Choose Season" ng-model="season" md-on-open="loadSeasons()"
+                                   style="min-width: 200px;" ng->
+                            <md-option ng-value="season" ng-repeat="season in seasons">{{season.season_number}}
+                            </md-option>
+                        </md-select>
+
+                        <md-select placeholder="Choose Episode" ng-model="episode" md-on-open="loadEpisodes(season.season_number)"
+                                   style="min-width: 200px;">
+                            <md-option ng-value="episode" ng-repeat="episode in episodes">{{episode.episode_number}}
+                            </md-option>
+                        </md-select>
+
+                        <md-button class="md-raised" ng-click="downloadSpeakerSpeeches(speaker.name, season.season_number, episode.episode_number)"
+                                   ng-disabled="speaker == null">
+                            Download Speaker Speeches
+                        </md-button>
+                    </section>
+                </fieldset>
             </div>
         </div>
     </div>
